# coding-agent-battles

./: README.md
.github/workflows/: pages.yml
.hermes/rdd/: 2026-06-22-scenario-detail-ui-execution-fix.md
docs/: agents.html  app.js  index.html  metrics.md  site-data.json  styles.css
docs/audit/: claim-ledger.json  claim-ledger.md  clean-context-cross-check-summary.md  cross-check-summary.md  gemini-3.1-pro-high-clean-context.json  gemini-3.1-pro-high-final-clean-current-rerun.json  gemini-3.1-pro-high-review-after-fixes.json  gemini-3.1-pro-high-review-final.json  gemini-3.1-pro-high-review-final2.json  gemini-3.1-pro-high-review.json  llm-review-prompt.md  mimo-clean-context.json  mimo-final-clean-current-rerun-text.txt  mimo-final-clean-current-rerun.json  telemetry-provenance.json  telemetry-provenance.md
docs/runs/: 2026-06-22-all-remaining-suite-summary.json  2026-06-22-all-remaining-suite-telemetry-audit.json
docs/scenarios/: bb-001.html  bb-002.html  bb-003.html  (+9 more)
runs/: 2026-06-22-bb-001-bb-003-current-rerun-summary.json
runs/2026-06-22-bb-001-broken-cli-argument/agents/mimo/workspace/: pyproject.toml
runs/2026-06-22-bb-001-broken-cli-argument/agents/mimo/workspace/bb001_wordfreq/: cli.py
scripts/: audit_claim_ledger.py  build_sanitized_telemetry_exports.py  build_telemetry_provenance.py  collect_run_metrics.py  create_remaining_cases.py  extract_bulk_telemetry.py  recompute_execution_scores.py  run_bb001_bb003_current_suite.py  run_remaining_suite.py  update_dashboard_from_remaining_suite.py
tasks/: backlog.md
templates/: run.md  task.md
(+551 files in other folders)
