[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bb001-wordfreq"
version = "0.1.0"
description = "Tiny intentionally broken CLI fixture for coding-agent battles"
requires-python = ">=3.10"

[project.scripts]
wordfreq = "bb001_wordfreq.cli:main"
